Q as Quit and full screen Game mode

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
 __pycache__/ship.cpython-312.pyc
 __pycache__/settings.cpython-312.pyc
 __pycache__/ship.cpython-312.pyc
+__pycache__/ship.cpython-312.pyc
